--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,29 @@
-services:
+services:  
+  postgresql:  
+    container_name: registration-service-postgres  
+    image: postgres:17.2-alpine3.20  
+    restart: always  
+    env_file:  
+      - ./.env  
+    environment:  
+      - POSTGRES_PASSWORD=${DB_PASSWORD}  
+      - POSTGRES_USER=${DB_USER}  
+      - POSTGRES_DB=${DB_NAME}  
+    volumes:  
+      - db_data:/var/lib/postgresql/data  
+    ports:  
+      - ${DB_PORT}:${DB_PORT}  
+    networks:  
+      - postgresql  
+    healthcheck:  
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]  
+      interval: 10s  
+      timeout: 5s  
+      retries: 5  
+      start_period: 30s 
+  
+volumes:  
+  db_data:  
+  
+networks:  
   postgresql:
-    container_name: storage
-    image: postgres:17.2-alpine3.20
-    restart: always
-    env_file:
-      - ./.env
-    environment:
-      - POSTGRES_NAME=${DB_NAME}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-    ports:
-      - ${DB_PORT}:${DB_PORT}
-    volumes:
-      - pg_data:/var/lib/postgresql/data
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_ready -U $${POSTGRES_USER} -d $${POSTGRES_DB}" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    logging:
-      options:
-        max-size: '100m'
-volumes:
-  pg_data:
