--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:  
   postgresql:  
     container_name: registration-service-postgres  
-    image: postgres:17.4-alpine3.20  
+    image: postgres:17.2-alpine3.20
     restart: always  
     env_file:  
       - ./.env  
@@ -12,7 +12,7 @@ services:
     volumes:  
       - db_data:/var/lib/postgresql/data  
     ports:  
-      - ${DB_PORT}:${DB_PORT}  
+      - ${DB_PORT_LOCAL}:${DB_PORT_CONTAINER}
     networks:  
       - postgresql  
     healthcheck:  
