--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,8 @@ services:
     env_file:  
       - ./.env  
     environment:  
-      - POSTGRES_PASSWORD=${DB_PASSWORD}  
-      - POSTGRES_USER=${DB_USER}  
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_USER=${DB_USER}
       - POSTGRES_DB=${DB_NAME}  
     volumes:  
       - db_data:/var/lib/postgresql/data  
@@ -16,12 +16,11 @@ services:
     networks:  
       - postgresql  
     healthcheck:  
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]  
+      test: ["CMD-SHELL", "pg_isready"]
       interval: 10s  
       timeout: 5s  
-      retries: 5  
-      start_period: 30s 
-  
+      retries: 5
+
 volumes:  
   db_data:  
   
