--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     image: postgres:17.2-alpine3.20
     restart: always  
     env_file:  
-      - ./.env  
+      - .env-example
     environment:  
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_USER=${DB_USER}
