--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'org.example'
+group = 'org.app.storage'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -37,4 +37,14 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'org.app.storage.StorageApplication'
+    }
+}
+
+bootJar {
+    mainClass = "StorageApplication"
 }
