--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=Storage
 
-spring.datasource.name=postgres
-spring.datasource.username=postgres
-spring.datasource.password=secret
+spring.datasource.name=YOUR-NAME
+spring.datasource.username=YOUR-USERNAME
+spring.datasource.password=YOUR-PASSWORD
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/NAME
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
