--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,28 @@
-services:  
-  postgresql:  
-    container_name: registration-service-postgres  
-    image: postgres:17.2-alpine3.20
-    restart: always  
-    env_file:  
-      - .env-example
-    environment:  
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_DB=${DB_NAME}  
-    volumes:  
-      - db_data:/var/lib/postgresql/data  
-    ports:  
-      - ${DB_PORT_LOCAL}:${DB_PORT_CONTAINER}
-    networks:  
-      - postgresql  
-    healthcheck:  
-      test: ["CMD-SHELL", "pg_isready"]
-      interval: 10s  
-      timeout: 5s  
-      retries: 5
+services:
+ postgres:
+  container_name: registration-service-postgres
+  image: postgres:17.2-alpine3.20
+  restart: unless-stopped
+  env_file:
+    - .env-example
+  environment:
+    - POSTGRES_DB=${DB_NAME}
+    - POSTGRES_USER=${DB_USER}
+    - POSTGRES_PASSWORD=${DB_PASSWORD}
+  ports:
+    - ${DB_PORT_LOCAL}:${DB_PORT_CONTAINER}
+  volumes:
+    - pg_data:/var/lib/postgresql/data
+  networks:
+    - postgresql
+  healthcheck:
+    test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+    interval: 5s
+    timeout: 5s
+    retries: 10
 
-volumes:  
-  db_data:  
-  
-networks:  
+volumes:
+  pg_data:
+
+networks:
   postgresql:
